# Clapper

./: README.rst  pyproject.toml
clapper/: 99-clapper.rules  __init__.py  __main__.py  clapper.service
tests/: test_clapper.py
